[tool.poetry]
name = "pycounts_dk"
version = "0.1.0"
description = "a toy package that helps to calculate a word cound from a text file"
authors = ["Daria Khon"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
